// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform method throws when wired method is combined with @api 1`] = `
Object {
  "end": Object {
    "column": 49,
    "line": 5,
  },
  "start": Object {
    "column": 0,
    "line": 5,
  },
}
`;

exports[`Transform property decorator expects an imported identifier as first parameter 1`] = `
Object {
  "end": Object {
    "column": 8,
    "line": 4,
  },
  "start": Object {
    "column": 6,
    "line": 4,
  },
}
`;

exports[`Transform property decorator expects an object as second parameter 1`] = `
Object {
  "end": Object {
    "column": 21,
    "line": 4,
  },
  "start": Object {
    "column": 14,
    "line": 4,
  },
}
`;

exports[`Transform property decorator expects wire adapter as first parameter 1`] = `
Object {
  "end": Object {
    "column": 7,
    "line": 3,
  },
  "start": Object {
    "column": 0,
    "line": 3,
  },
}
`;

exports[`Transform property decorator expects wire adapter to be imported 1`] = `
Object {
  "end": Object {
    "column": 13,
    "line": 3,
  },
  "start": Object {
    "column": 6,
    "line": 3,
  },
}
`;

exports[`Transform property throws when using 2 wired decorators 1`] = `
Object {
  "end": Object {
    "column": 58,
    "line": 4,
  },
  "start": Object {
    "column": 0,
    "line": 4,
  },
}
`;

exports[`Transform property throws when wired property is combined with @api 1`] = `
Object {
  "end": Object {
    "column": 58,
    "line": 5,
  },
  "start": Object {
    "column": 0,
    "line": 5,
  },
}
`;

exports[`Transform property throws when wired property is combined with @track 1`] = `
Object {
  "end": Object {
    "column": 58,
    "line": 5,
  },
  "start": Object {
    "column": 0,
    "line": 5,
  },
}
`;
